--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,69 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/ch11/errorCode_error.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<exception-type>java.lang.Exception</exception-type>
+		<location>/ch11/exceptionType_error.jsp</location>
+	</error-page>
+	
+	<filter>
+	<!-- 아래의 Filter01은 우리가 여기서 임의로 지정해주는 필터 이름임, 대신 아래의 매핑이름과 동일하게 해주기. -->
+		<filter-name>Filter01</filter-name>
+		<!-- 사용할 자바 클래스 -->
+		<filter-class>ch12.com.filter.AuthenFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter01</filter-name>
+		<!-- 여기서 확인한다 -->
+		<url-pattern>/ch12/filter01_process.jsp</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>Flter02</filter-name>
+		<filter-class>ch12.com.filter.InitParamFilter</filter-class>
+		<init-param>
+			<param-name>param1</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+		<init-param>
+			<param-name>param2</param-name>
+			<param-value>1234</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter02</filter-name>
+		<url-pattern>/ch12/filter02_process.jsp</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>Filter02_2</filter-name>
+		<filter-class>ch12.com.filter.LogFileLilter</filter-class>
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>C:\java102\logs\monitor.log</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter02_2</filter-name>
+		<url-pattern>/ch12/filter02_process.jsp</url-pattern>
+	</filter-mapping>
 </web-app>
+
+
+
+
+
+
+
+
+
+
+
+
+
